[Twitter] Add OAuth Authentication Methods

--- a/CSharpTracker/CSharpTracker/App.config
+++ b/CSharpTracker/CSharpTracker/App.config
@@ -6,5 +6,6 @@
     <appSettings>
       <add key ="TwitterAppToken" value ="**********" />
       <add key ="TwitterAppTokenSecret" value ="**********" />
+      <add key ="TwitterBearerToken" value ="**********" />
     </appSettings>
 </configuration>
