-Instagram branch created. -Imported Insta.Graph.API.csproj, Insta.Graph.Entity.csproj(project files from tutorial) and set target of both to .netstandard -Added InstagramWindow called via button from MainWindow -Implemented GetMediaAsync functionality(error: Bad request due to an invalid retrieved Instagram post trying to access insights endpoint)

--- a/CSharpTracker/CSharpTracker/CSharpTracker.csproj
+++ b/CSharpTracker/CSharpTracker/CSharpTracker.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -55,6 +58,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="InstagramWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -62,6 +69,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="InstagramWindow.xaml.cs">
+      <DependentUpon>InstagramWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -86,6 +96,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -93,6 +104,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Insta.Graph.API.Models\Insta.Graph.Entity.csproj">
+      <Project>{1febf9ee-b9ad-41a1-b0f8-25e3a665ed97}</Project>
+      <Name>Insta.Graph.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Insta.Graph.API\Insta.Graph.API.csproj">
+      <Project>{6a346c64-4659-4cce-a9d7-888bde29d0cc}</Project>
+      <Name>Insta.Graph.API</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
