--- a/CSharpTracker/CSharpTracker/packages.config
+++ b/CSharpTracker/CSharpTracker/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
+  <package id="Facebook" version="7.0.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
